--- a/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationControl.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationControl.xaml
@@ -26,17 +26,19 @@
         <Border Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
         <ScrollViewer HorizontalScrollBarVisibility="Disabled">
             <StackPanel Margin="5">
-                <Border Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="0">
-                    <StackPanel Margin="5">
-                        <DockPanel >
-                            <Button DockPanel.Dock="Right" Content="模板组管理" Click="Button_Click"  Margin="5,0"/>
-                            <Button x:Name="uploadbutton" d:DataContext="{d:DesignInstance phy:PhyCamera}" DockPanel.Dock="Right" Content="上传" Command="{Binding UploadCalibrationCommand}"  Margin="5,0"/>
-                            <hc:ComboBox x:Name="ComboBoxList" Text="{Binding CalibrationMode}" DisplayMemberPath="Name" />
-                        </DockPanel>
+                <Border Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="0,0,0,5">
+                    <StackPanel d:DataContext="{d:DesignInstance phy:PhyCamera}" x:Name="uploadbutton" Margin="5" Orientation="Horizontal">
+                        <Button  DockPanel.Dock="Right" Content="上传校正组" Command="{Binding UploadCalibrationCommand}"  Margin="5,0"/>
+                        <Button DockPanel.Dock="Right" Content="校正组管理" Click="Button_Click"  Margin="5,0"/>
+                        <Button d:DataContext="{d:DesignInstance phy:PhyCamera}" DockPanel.Dock="Right" Content="打开配置文件夹" Command="{Binding OpenSettingDirectoryCommand}"  Margin="5,0"/>
                     </StackPanel>
                 </Border>
-                <Border Style="{StaticResource BorderModuleArea}" CornerRadius="5" Margin="0,5">
+
+                <Border Style="{StaticResource BorderModuleArea}" CornerRadius="5" Margin="0,0,0,5">
                     <StackPanel Margin="5">
+                        <DockPanel  Margin="0,0,0,5">
+                            <hc:ComboBox x:Name="ComboBoxList" Text="{Binding CalibrationMode}" DisplayMemberPath="Name" />
+                        </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <ToggleButton Style="{StaticResource ButtonMQTTConnect}" IsEnabled="False" DockPanel.Dock="Right" Width="16" IsChecked="{Binding Normal.DarkNoise.IsExitFile,Mode=OneWay}" Margin="5,0,0,0"/>
                             <TextBlock DockPanel.Dock="Left" Text="暗噪声"  Width="80" />
